<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/addPlantLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/editToolbar"
        layout="@layout/custom_toolbar"/>

    <ScrollView
        android:layout_below="@+id/editToolbar"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/editImageLayout"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:background="@drawable/solid_border_lilac"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/editImageView"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_marginTop="20dp"
                    android:layout_gravity="center"
                    android:background="@drawable/solid_border_white"
                    android:scaleType="centerCrop"
                    android:contentDescription="@string/imageDescription" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="@string/plant_name"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/editNameEditText"
                    android:background="@drawable/solid_border_transparent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:layout_marginEnd="20dp"/>
            </LinearLayout>

            <TextView
                android:id="@+id/etEditNameError"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:layout_marginEnd="20dp"
                android:textColor="@android:color/holo_red_light"
                android:visibility="gone"
                android:text="@string/str_required"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="@string/plant_type"
                    android:textSize="20sp" />

                <Spinner
                    android:id="@+id/editTypeSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="@string/plant_sun"
                    android:textSize="20sp" />

                <Spinner
                    android:id="@+id/editSunSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="@string/last_watered"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/txtEditLastWateredDatePicker"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/str_select_date"
                    android:layout_marginEnd="20dp"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:background="@drawable/solid_border_transparent"
                    android:focusableInTouchMode="false"
                    android:textSize="17sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="@string/water_req"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/editWaterEditText"
                    android:background="@drawable/solid_border_transparent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/str_water_freq"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:inputType="number"
                    android:layout_marginEnd="20dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="@string/str_temperature"
                    android:textSize="20sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:orientation="horizontal">
                    <EditText
                        android:id="@+id/etEditTempDay"
                        android:background="@drawable/solid_border_transparent"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:inputType="number"
                        android:hint="@string/str_day_temp"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp"
                        android:layout_marginEnd="10dp" />
                    <EditText
                        android:id="@+id/etEditTempNight"
                        android:background="@drawable/solid_border_transparent"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:inputType="number"
                        android:hint="@string/str_night_temp"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp"
                        android:layout_marginStart="10dp" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="@string/str_humidity"
                    android:textSize="20sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:orientation="horizontal">
                    <EditText
                        android:id="@+id/etEditHumidityStart"
                        android:background="@drawable/solid_border_transparent"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:inputType="number"
                        android:hint="@string/str_humidity_start"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp"
                        android:layout_marginEnd="5dp" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="-"
                        android:textSize="20sp"/>
                    <EditText
                        android:id="@+id/etEditHumidityEnd"
                        android:background="@drawable/solid_border_transparent"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:inputType="number"
                        android:hint="@string/str_humidity_end"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp"
                        android:layout_marginStart="5dp" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="@string/comments"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/editCommentEditText"
                    android:background="@drawable/solid_border_transparent"
                    android:layout_width="match_parent"
                    android:inputType="textMultiLine"
                    android:layout_height="100dp"
                    android:layout_marginEnd="20dp"/>
            </LinearLayout>

            <Button
                android:id="@+id/btnEditPlantToDB"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="40dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:textSize="17sp"
                android:background="@drawable/button_shape"
                android:text="@string/str_edit_plant" />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>