<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/start_main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@android:color/white">

    <LinearLayout
        android:id="@+id/splash_first_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:visibility="visible">

        <TextView
            android:id="@+id/start_welcome_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Welcome To"
            android:layout_marginTop="150dp"
            android:textStyle="bold"
            android:textSize="30sp" />

        <ImageView
            android:id="@+id/logo_image_view"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/plant"
            android:layout_marginBottom="20dp"
            android:contentDescription="@string/logo_image" />

        <TextView
            android:id="@+id/start_app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:text="@string/app_name"
            android:textSize="25sp" />

        <LinearLayout
            android:id="@+id/splash_second_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="100dp"
            android:visibility="gone"
            android:orientation="vertical">

            <com.google.android.gms.common.SignInButton
                android:id="@+id/btnGoogleSignIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:visibility="gone" />

            <Button
                android:id="@+id/btnEmailSignIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:text="Email Sign In"/>

            <!--<com.facebook.login.widget.LoginButton
                android:id="@+id/btnFacebookSignIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"/>-->

            <LinearLayout
                android:id="@+id/email_text_fields"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/fieldEmail"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:hint="@string/str_email"
                    android:drawableStart="@drawable/ic_email"
                    android:drawablePadding="20dp"
                    android:backgroundTint="#26858c"
                    android:inputType="textEmailAddress" />

                <EditText
                    android:id="@+id/fieldPassword"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:hint="@string/str_password"
                    android:drawableStart="@drawable/ic_password"
                    android:drawablePadding="20dp"
                    android:backgroundTint="#26858c"
                    android:inputType="textPassword" />

                <TextView
                    android:id="@+id/tvError"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/holo_red_dark"
                    android:textStyle="italic"
                    android:textSize="22sp"/>

                <Button
                    android:id="@+id/btnVerifyEmailSignIn"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="40dp"
                    android:layout_marginBottom="40dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:background="@drawable/button_shape"
                    android:textSize="17sp"
                    android:text="Sign In"/>

                <TextView
                    android:id="@+id/tvSignUp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="40dp"
                    android:layout_marginBottom="40dp"
                    android:gravity="center"
                    android:textSize="17sp"
                    android:text="Don't have an account? Sign Up now"/>

                <TextView
                    android:id="@+id/tvVerifyEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textStyle="italic"
                    android:text="Verify Email"
                    android:visibility="gone"
                    android:textSize="22sp"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/sign_up_text_fields"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/etNewEmail"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:hint="@string/str_email"
                    android:drawablePadding="20dp"
                    android:inputType="textEmailAddress" />

                <EditText
                    android:id="@+id/etNewPassword"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:hint="New Password"
                    android:backgroundTint="#26858c"
                    android:inputType="textPassword" />

                <EditText
                    android:id="@+id/etNewConfirmPassword"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:hint="Confirm Password"
                    android:backgroundTint="#26858c"
                    android:inputType="textPassword" />

                <TextView
                    android:id="@+id/tvNewEmailError"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="italic"
                    android:textColor="@android:color/holo_red_dark"
                    android:textSize="22sp"/>

                <Button
                    android:id="@+id/btnEmailSignUp"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="40dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:background="@drawable/button_shape"
                    android:textSize="17sp"
                    android:text="Sign Up"/>


            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>