<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/border">

    <include
        android:id="@+id/selectedToolbar"
        layout="@layout/custom_toolbar"/>

    <ScrollView
        android:layout_below="@+id/selectedToolbar"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/selectedPlantTopInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/solid_border_lilac"
                android:paddingBottom="10dp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/btnNotificationAlert"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:visibility="gone"
                    android:src="@drawable/ic_notifications_active"
                    android:gravity="start"/>

                <ImageView
                    android:id="@+id/plantImageView"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/solid_border_white"
                    android:contentDescription="@string/imageDescription"
                    android:scaleType="centerCrop" />

                <TextView
                    android:id="@+id/plantNameTextView"
                    android:layout_height="wrap_content"
                    android:layout_width="200dp"
                    android:layout_gravity="center"
                    android:textSize="20sp"
                    android:text="Name"/>

                <TextView
                    android:id="@+id/plantTypeTextView"
                    android:layout_height="wrap_content"
                    android:layout_width="200dp"
                    android:layout_gravity="center"
                    android:textSize="20sp"
                    android:text="Type"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btnEditPlantInfo"
                        android:layout_width="0dp"
                        android:layout_height="30dp"
                        android:layout_weight="1"
                        android:background="@drawable/ic_edit"/>
                    <Space
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="8"/>
                    <Button
                        android:id="@+id/btnDeletePlant"
                        android:layout_width="0dp"
                        android:layout_height="30dp"
                        android:layout_weight="1"
                        android:background="@drawable/ic_delete"/>
                </LinearLayout>

            </LinearLayout>


            <LinearLayout
                    android:layout_below="@+id/selectedPlantTopInfo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:orientation="vertical">

                    <!--  Sun and Water -->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="20dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp">

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:orientation="vertical">
                            <ImageView
                                android:layout_width="50dp"
                                android:layout_height="50dp"
                                android:src="@drawable/sun"/>
                            <TextView
                                android:id="@+id/plantSunRequirementsTextView"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Sun"
                                android:textAlignment="center"
                                android:textSize="20sp" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="50dp"
                                android:layout_height="50dp"
                                android:src="@drawable/water" />
                            <TextView
                                android:id="@+id/plantWaterTextView"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Water"
                                android:textAlignment="center"
                                android:textSize="20sp" />
                        </LinearLayout>

                    </LinearLayout>

                    <!--  Humidity and Temperature -->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="20dp"
                        android:layout_marginBottom="10dp">

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:orientation="vertical">
                            <ImageView
                                android:layout_width="50dp"
                                android:layout_height="50dp"
                                android:src="@drawable/fog"/>
                            <TextView
                                android:id="@+id/tvHumidity"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Humidity"
                                android:textSize="20sp" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:orientation="vertical">
                            <ImageView
                                android:layout_width="50dp"
                                android:layout_height="50dp"
                                android:src="@drawable/temp"/>
                            <TextView
                                android:id="@+id/plantTemperatureTextView"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Temp"
                                android:textAlignment="center"
                                android:textSize="20sp" />
                        </LinearLayout>
                    </LinearLayout>

                    <!-- Last Watered  -->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:orientation="horizontal">
                        <TextView
                            android:id="@+id/tvLastWateredLabel"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="3"
                            android:textSize="20sp"
                            android:textStyle="bold"
                            android:text="@string/last_watered"/>
                        <TextView
                            android:id="@+id/tvLastWateredDate"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"
                            android:background="@android:color/transparent"
                            android:layout_marginStart="10dp"
                            android:layout_marginEnd="10dp"
                            android:textAlignment="textEnd"
                            android:textSize="20sp" />
                    </LinearLayout>

                    <!-- Comments  -->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:orientation="vertical">
                        <TextView
                            android:id="@+id/commentsTextView"
                            android:layout_height="wrap_content"
                            android:layout_width="match_parent"
                            android:textSize="20sp"
                            android:textStyle="bold"
                            android:text="@string/comments"/>
                        <TextView
                            android:id="@+id/plantCommentsTextView"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/solid_border_transparent"
                            android:paddingStart="10dp"
                            android:paddingEnd="10dp"
                            android:textSize="20sp" />
                    </LinearLayout>

                </LinearLayout>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>
